@@ -1,5 +1,12 @@
 2008-08-27  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* autogen.sh:
+	* src/config.h.in:
+	Updated autoge.sh, removed config.h.in now generated by autogen.sh
+	Thanks to Werner Pantke
+
+2008-08-27  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* src/config.h.in:
 	Re-added
 
